[package]
name = "ascii-cli"
version = "1.2.0"
edition = "2021"
authors = ["Atle Skaanes Ahrenfeldt <atle.skaanes@gmail.com>"]
description = "A small CLI for quickly viewing the ASCII table in your terminal"
repository = "https://github.com/AtleSkaanes/ascii-cli"
keywords = ["utility", "ascii", "table"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
radix_fmt = "1.0.0"
